# Raylib-SimpleGames

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
include/: Asteroids.h  GameBase.h  Menu.h  PingPong.h  RaylibGames.h  Snake.h
include/framework/: GameBase.h  GameObject2D.h  GameObjectCircle.h  GameObjectRect.h  Vector2Utils.h
include/memory/: ArenaAllocator.h
src/: Asteroids.cpp  Menu.cpp  PingPong.cpp  Snake.cpp  main.cpp
